--- a/form-login.html
+++ b/form-login.html
@@ -11,8 +11,7 @@
     <!-- form login -->
     <div class="container">
         <!-- logo -->
-        <!-- <img src="logo.png" alt="logo" class="logo"> -->
-        <div class="logo">logo</div>
+        <h3 class="logo">Art Room</h3>
         <span></span>
         <h4 class="logo">Silahkan login terlebih dahulu</h4>
         <br>
@@ -21,14 +20,14 @@
             <div>
                 <label>Email address</label>
                 <div>
-                    <input class="form-input" type="email" name="email" placeholder="Masukkan E-mail">
+                    <input class="form-input" type="email" name="email">
                 </div>
             </div>
             <!-- password -->
             <div>
                 <label>Password</label>
                 <div>
-                    <input class="form-input" type="password" name="password" placeholder="Masukkan password">
+                    <input class="form-input" type="password" name="password">
                 </div>
             </div>
             <div>
