--- a/form-register.html
+++ b/form-register.html
@@ -11,21 +11,21 @@
 <body>
     <!-- form login -->
     <div class="container">
-        <img src="logoCopy.png" alt="logo" class="logo">
+        <h3 class="logo">Art Room</h3>
         <span></span>
         <h4 class="logo">Buat akun Baru</h4>
         <form>
             <label for="nama">Nama</label>
             <div>
-                <input type="text" class="form-input" name="nama" placeholder="Nama Depan">
+                <input type="text" class="form-input" name="nama">
             </div>
             <label for="email">E-Mail</label>
             <div>
-                <input type="email" class="form-input" name="email" placeholder="Masukkan E-mail">
+                <input type="email" class="form-input" name="email">
             </div>
             <label for="telp">Nomor telp</label>
             <div>
-                <input type="text" class="form-input" name="telp" placeholder="Masukkan Nomor Telp">
+                <input type="text" class="form-input" name="telp">
             </div>
             <label for="tanggal-lahir">Tanggal lahir</label>
             <div>
@@ -33,7 +33,7 @@
             </div>
             <label for="password">Password</label>
             <div>
-                <input type="password" class="form-input" name="password" placeholder="Masukkan password">
+                <input type="password" class="form-input" name="password">
             </div>
             <br>
             <button type="submit" class="daftar">Daftar</button>
